一部非推奨項目の置き換え、各種機能の分割